--- a/src/App.css
+++ b/src/App.css
@@ -175,11 +175,24 @@
   height: 30px;
   margin-top: 46px;
   margin-left: 20px;
-  
+  background-color: transparent;
+  border: none;
 }
 
 .check-side{
   display:flex;
   align-items: center;
   margin-left: 30px;
+}
+
+.body-home {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.buy-home {
+  position: relative;
+  left: 90px;
+  bottom: 80px;
 }
